# ff

./: .env.example  .gitignore  .pre-commit-config.yaml  QUICKSTART.md  README.md  docker-compose.yml  justfile  pyproject.toml
docs/: ARCHITECTURE.md  SECURITY.md
docs/adr/: 0001-langgraph-supervisor.md  0002-langfuse-observability.md
infra/postgres-init/: 00-init.sql  01-digest-schedule.sql  02-budget.sql  03-savings-goal.sql  04-categories.sql
src/family_finance/: __init__.py
src/family_finance/agents/: __init__.py  _messages.py  advisor.py  budgets.py  categorizer.py  clarifications.py  clarify.py  coach.py  compaction.py  digest.py  digest_schedule_parser.py  ingest.py  ledger.py  ledger_terms.py  receipt.py  state.py  subscriptions.py  supervisor.py  tax.py  web_lookup.py
src/family_finance/application/: __init__.py  ports.py
src/family_finance/bot/: __main__.py  scheduler.py  telegram_text.py
src/family_finance/bot/handlers/: __init__.py  clarify_buttons.py  documents.py  import_confirm_buttons.py  photos.py  start.py  tax_confirm.py
src/family_finance/domain/: __init__.py  budget.py  digest_schedule.py  family.py  receipt.py  savings_goal.py  subscription.py  tax_deduction.py  transaction.py  types.py
src/family_finance/infrastructure/: __init__.py  settings.py
src/family_finance/infrastructure/llm/: __init__.py  openrouter_client.py
src/family_finance/infrastructure/mcp/: __init__.py  client.py  reader.py
src/family_finance/infrastructure/memory/: __init__.py  checkpointer.py  episode_formatter.py  graphiti_client.py
src/family_finance/infrastructure/observability/: __init__.py  langfuse_setup.py
src/family_finance/infrastructure/parsers/: __init__.py  proverkacheka.py  qr_decoder.py  sber_pdf.py  tinkoff.py  vision_receipt.py
src/family_finance/infrastructure/persistence/: __init__.py  postgres_categorization.py  postgres_transactions.py
src/family_finance/infrastructure/security/: __init__.py  injection_guard.py  presidio_pii.py
src/family_finance/mcp_server/: __init__.py  server.py
src/family_finance/web/: __init__.py  __main__.py  agent.py  app.py  dashboard.py
src/family_finance/web/static/: dashboard.css  dashboard.js
src/family_finance/web/templates/: dashboard.html  error.html
tests/: conftest.py
tests/evals/: README.md  bench.py  cascade_task.py  experiment.py  scorers.py  test_runner.py
tests/evals/cases/cascade/: known_merchant_rule.yaml  learning_loop.yaml  novel_merchant_to_llm.yaml
tests/evals/cases/categorization/: ambiguous_low_confidence.yaml  clothes_lamoda.yaml  delivery_yandex_eda.yaml  fuel_lukoil.yaml  obvious_groceries.yaml  obvious_pharmacy.yaml  pets_chetyre_lapy.yaml  repair_leroy.yaml  restaurant_shokoladnitsa.yaml  taxi_yandex.yaml  (+1 more)
tests/integration/: test_detect_recurring.py  test_mcp_server.py  test_postgres_transactions.py
tests/samples/: tinkoff_sample.csv
tests/unit/: test_advisor.py  test_budgets.py  test_categorizer.py  test_clarifications.py  test_clarify.py  test_coach.py  test_compaction.py  test_digest.py  test_digest_schedule.py  test_domain.py  test_episode_formatter.py  test_ingest_hitl.py  test_injection_guard.py  test_ledger.py  test_mcp_decode.py  test_messages.py  test_presidio_pii.py  test_proverkacheka_client.py  test_proverkacheka_parsers.py  test_qr_decoder.py  test_receipt_agent.py  test_savings_goal.py  test_sber_parser.py  test_state_reducers.py  test_subscriptions.py  test_supervisor_routing.py  test_tax_calc.py  test_tax_confirm.py  test_tax_hitl.py  test_telegram_text.py  test_tinkoff_parser.py  test_web_dashboard.py
(+17 files in other folders)
