[project]
name = "family-finance"
version = "0.1.0"
description = "AI Family Finance Assistant — LangGraph supervisor + 3 specialists, Telegram bot, LangFuse observability, OpenRouter (multi-provider LLM gateway)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Yuri" }]

dependencies = [
    # === Core ===
    "pydantic>=2.10.3",
    "pydantic-settings>=2.7.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    # === Orchestration ===
    "langgraph>=1.2.0",
    "langgraph-checkpoint-postgres>=3.0.0",
    # Required by LangFuse's LangChain/LangGraph callback integration.
    "langchain>=1.0.0",
    "langchain-core>=0.3.27",
    # First-party OpenRouter integration (2026) — заменяет langchain-openai+base_url
    "langchain-openrouter>=0.1.0",
    # === Observability ===
    "langfuse>=2.57.0",
    # === HTTP client (для прямых вызовов и проверок) ===
    "httpx>=0.28.1",
    # === Telegram bot ===
    "aiogram>=3.20.0",
    # === Persistence ===
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "psycopg[binary,pool]>=3.2.3",
    # === Domain-specific ===
    "pandas>=2.2.3",
    "openpyxl>=3.1.5",
    "pyzbar>=0.1.9",
    "opencv-python-headless>=4.10.0.84",
    "pillow>=11.0.0",
    "pdfplumber>=0.11.9",
    "graphiti-core>=0.20.0",
    "falkordb>=1.0.0",
    "aiodns>=4.0.4",
    "apscheduler>=3.11.2",
    "fastmcp>=3.3.1",
    "langchain-mcp-adapters>=0.2.2",
    "presidio-analyzer>=2.2.362",
    "presidio-anonymizer>=2.2.362",
]

[dependency-groups]
dev = [
    "ruff>=0.8.4",
    "mypy>=1.13.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "pre-commit>=4.0.1",
    "httpx>=0.28.1",
    "ipython>=8.30.0",
]

evals = [
    "deepeval>=2.0.0",
    "ragas>=0.2.0",
]

phase2 = [
    # "graphiti-core>=0.20.0",
    # "falkordb>=1.0.0",
    # "pgvector>=0.3.6",
]

phase3 = [
    # PII masking (presidio-*) is now a core dependency; see infrastructure/security.
    # Prompt-injection guard is a lean custom rail — no nemoguardrails.
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/family_finance"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E","F","W","I","N","UP","B","SIM","RUF","ASYNC","S","TCH","PT"]
ignore = ["S101","B008","RUF001","RUF002","RUF003","TC001","TC002","TC003"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S","PT011"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
warn_unreachable = true
warn_redundant_casts = true
disallow_any_generics = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["asyncpg.*","pyzbar.*","cv2.*","langfuse.*","langchain_openrouter.*","pdfplumber.*","pdfminer.*","graphiti_core.*","falkordb.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Share one event loop across all tests in a session.
# Prevents "Event loop is closed" when LangChain's httpx connection pool
# is reused across per-test loops (manifests as failure on the 2nd async test).
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-ra","--strict-markers","--strict-config",
    "--cov=family_finance","--cov-report=term-missing","--cov-report=html",
]
markers = [
    "unit: fast, no IO",
    "integration: requires docker services",
    "eval: LLM evaluation, slow",
]
